# cpp-course-design

./: CMakeLists.txt  README.md  main.cpp
header/: Engineer.h
resource/: Engineer.cpp
